# kmscon

./: README.md  meson.build  meson.options
src/: conf.h  font.c  font.h  font_freetype.c  font_pango.c  font_rotate.c  font_rotate.h  kmscon_conf.c  kmscon_mod_freetype.c  kmscon_terminal.c  meson.build  shl_gl.h  shl_gl_shader.c  text.c  text.h  text_bbulk.c  text_gltex.c  uterm_drm2d_video.c  uterm_drm3d_render.c  uterm_drm3d_video.c  uterm_drm_shared.c  uterm_drm_shared_internal.h  uterm_fbdev_video.c  uterm_input_uxkb.c  uterm_video.c  uterm_video_internal.h
tests/: test_bbulk.c  test_text.c
